@@ -2531,6 +2531,28 @@ mono_analyze_stack (MonoFlowGraph *cfg)
 			break;
 		}
 
+		case CEE_SHR: {
+			++ip;  
+			sp -= 2;
+			t1 = mono_ctree_new (mp, MB_TERM_SHR, sp [0], sp [1]); 
+			PUSH_TREE (t1, sp [0]->svt);     
+			break;
+		}
+		case CEE_SHR_UN: {
+			++ip;  
+			sp -= 2;
+			t1 = mono_ctree_new (mp, MB_TERM_SHR_UN, sp [0], sp [1]); 
+			PUSH_TREE (t1, sp [0]->svt);     
+			break;
+		}
+		case CEE_SHL: {
+			++ip;  
+			sp -= 2;
+			t1 = mono_ctree_new (mp, MB_TERM_SHL, sp [0], sp [1]); 
+			PUSH_TREE (t1, sp [0]->svt);     
+			break;
+		}
+
 		MAKE_BI_ALU (ADD)
 		MAKE_BI_ALU (ADD_OVF)
 		MAKE_BI_ALU (ADD_OVF_UN)
@@ -2540,9 +2562,6 @@ mono_analyze_stack (MonoFlowGraph *cfg)
 		MAKE_BI_ALU (AND)
 		MAKE_BI_ALU (OR)
 		MAKE_BI_ALU (XOR)
-		MAKE_BI_ALU (SHL)
-		MAKE_BI_ALU (SHR)
-		MAKE_BI_ALU (SHR_UN)
 		MAKE_SPILLED_BI_ALU (MUL)
 		MAKE_SPILLED_BI_ALU (MUL_OVF)
 		MAKE_SPILLED_BI_ALU (MUL_OVF_UN)
@@ -2908,6 +2927,7 @@ mono_analyze_stack (MonoFlowGraph *cfg)
 			PUSH_TREE (t1, VAL_DOUBLE);		
 			break;
 		}
+		case CEE_CONV_OVF_I:
 		case CEE_CONV_OVF_I4: {
 			++ip;
 			sp--;
@@ -2923,6 +2943,7 @@ mono_analyze_stack (MonoFlowGraph *cfg)
 			PUSH_TREE (t1, VAL_I32);		
 			break;
 		}
+		case CEE_CONV_OVF_U:
 		case CEE_CONV_OVF_U4: {
 			++ip;
 			sp--;
