@@ -268,7 +268,6 @@ System.Runtime.Remoting.Metadata.W3cXsd2001.SoapToken
 System.Runtime.Remoting.Metadata.W3cXsd2001.SoapYear
 System.Runtime.Remoting.Metadata.W3cXsd2001.SoapYearMonth
 System.Runtime.Remoting.Metadata.XmlFieldOrderOption
-System.Runtime.Remoting.ObjectHandle
 System.Runtime.Remoting.Proxies.ProxyAttribute
 System.Runtime.Remoting.Proxies.RealProxy
 System.Runtime.Remoting.RemotingConfiguration
@@ -299,6 +298,7 @@ System.Runtime.Serialization.SerializationEntry
 System.Runtime.Serialization.SerializationInfoEnumerator
 System.Runtime.Serialization.SurrogateSelector
 System.RuntimeArgumentHandle
+System.Security.AllowPartiallyTrustedCallersAttribute
 System.Security.Cryptography.CryptoConfig
 System.Security.Cryptography.DSACryptoServiceProvider
 System.Security.Cryptography.HMACSHA1
@@ -351,16 +351,13 @@ System.Security.Permissions.ZoneIdentityPermission
 System.Security.Policy.AllMembershipCondition
 System.Security.Policy.ApplicationDirectory
 System.Security.Policy.ApplicationDirectoryMembershipCondition
-System.Security.Policy.CodeGroup
 System.Security.Policy.FileCodeGroup
 System.Security.Policy.FirstMatchCodeGroup
 System.Security.Policy.Hash
 System.Security.Policy.HashMembershipCondition
 System.Security.Policy.NetCodeGroup
 System.Security.Policy.PermissionRequestEvidence
-System.Security.Policy.PolicyException
 System.Security.Policy.PolicyStatement
-System.Security.Policy.PolicyStatementAttribute
 System.Security.Policy.Publisher
 System.Security.Policy.PublisherMembershipCondition
 System.Security.Policy.Site
@@ -375,6 +372,7 @@ System.Security.Policy.ZoneMembershipCondition
 System.Security.Principal.WindowsIdentity
 System.Security.Principal.WindowsImpersonationContext
 System.Security.Principal.WindowsPrincipal
+System.Threading.CompressedStack
 System.Threading.IOCompletionCallback
 System.Threading.ThreadStart
 System.Threading.TimerCallback
